SFDC Automation/src/objects/Solutions_Interest__c.object
<CustomObject>
    <fields>
        <fullName>Contact_Id__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contact Id</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Solutions Interests</relationshipLabel>
        <relationshipName>Solutions_Interests</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Latest_Source__c</fullName>
        <label>Latest Source</label>
        <picklist>
            <picklistValues>
                <fullName>BDM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Blitz</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cold Call</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Concentrix</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Corporate Marketing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DBD</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>F&amp;B Local Marketing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>RAM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Referral</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Rental Counter</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Web</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NRM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>National Tag Team</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CDM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DNA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>COMBO</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Lead_Id__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Lead Id</label>
        <referenceTo>Lead</referenceTo>
        <relationshipLabel>Solutions Interests</relationshipLabel>
        <relationshipName>Solutions_Interests</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Original_Source__c</fullName>
        <label>Original Source</label>
        <picklist>
            <picklistValues>
                <fullName>BDM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Blitz</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cold Call</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Concentrix</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Corporate Marketing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DBD</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>F&amp;B Local Marketing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>RAM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Referral</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Rental Counter</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Web</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NRM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>National Tag Team</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CDM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DNA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>COMBO</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Product_Detail__c</fullName>
        <label>Product Detail</label>
        <picklist>
            <controllingField>Product_Line__c</controllingField>
            <picklistValues>
                <fullName>Choice Lease</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Comprehensive</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dry Trailer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Flatbed Trailer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Flex</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Gap</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hazmat</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Liability</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Market</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>On Demand</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>OPIS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Physical Damage</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Plus</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Plus One</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Preventive</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Reefer Trailer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Reefer Truck</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Single Axle Sleeper</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Single Axle Tractor</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Stake or Flatbed Truck</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Standard</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Tandem Axle Sleeper</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Tandem Axle Tractor</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Tanker Trailer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Tank Truck</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Truck</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Van</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>VOSA</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Product_Line__c</fullName>
        <label>Product Line</label>
        <picklist>
            <picklistValues>
                <fullName>Lease</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Maintenance</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>RydeSmart</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Used Vehicles</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ryder Fleet Products</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dedicated Carrier</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fuel</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Insurance</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Rental</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Supply Chain &amp; Logistics</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Score__c</fullName>
        <label>Score</label>
        <length>2</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Stage__c</fullName>
        <label>Stage</label>
        <picklist>
            <picklistValues>
                <fullName>-- None --</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Suspect</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Unread</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Accepted</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Contacted</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Qualified</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Unqualified</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Renurture</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>Solutions Interest</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Lead_Id__c</columns>
        <columns>Contact_Id__c</columns>
        <columns>UPDATEDBY_USER.ALIAS</columns>
        <columns>LAST_UPDATE</columns>
        <columns>Product_Line__c</columns>
        <columns>Product_Detail__c</columns>
        <columns>Original_Source__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Solutions Interest ID</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Solutions Interests</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>